--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>🌟 Лабіринт Гра</title>
+    <title>🌟 Лабіринти Захара</title>
   </head>
   <body>
     <div id="root"></div>
